Vandana - Converted the sample xmls to stringtemplates and renamed a few classes